# Noir_WalkingSim

./: CMakeLists.txt  CMakeSettings.json  README.txt  audio_manager.cpp  audio_manager.h  branch.cpp  branch.h  camera.cpp  camera.h  cig.cpp  cig.h  cigarette_fp.glsl  cigarette_gp.glsl  cigarette_vp.glsl  cpp.hint  game.cpp  game.h  noir_filter_fp.glsl  noir_fp.glsl  noir_vp.glsl  particle_vp.glsl  path_config.h  rain_particles_gp.glsl  rain_particles_vp.glsl  resource.cpp  resource_manager.cpp  resource_manager.h  road_noir_fp.glsl  road_noir_vp.glsl  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  screen_space_fp.glsl  skybox_vp.glsl  streetlamp.cpp  streetlamp.h  tiled_brick_fp.glsl  tiled_brick_vp.glsl
Assets/: Building1.mtl  Car.blend  Car1.mtl  Car2.mtl  Sources.txt  StraightRoad1.mtl  centralBuilding.mtl
Assets/Buildings/: Building2.mtl  Building3.mtl  CentralBuilding.mtl
Assets/Cig/: Cig.mtl
Assets/Grate/: GrateModel.mtl
Assets/TrafficLight/: Traffic_Lights.mtl
Libs/include/AL/: alut.h
Libs/lib/: alut.lib
Libs/lib/pkgconfig/: freealut.pc
Libs/share/freealut/: FreeALUTConfig.cmake  FreeALUTTargets-debug.cmake  FreeALUTTargets-release.cmake  FreeALUTTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
Libs/share/openal-soft/: vcpkg.spdx.json  vcpkg_abi_info.txt
